--- a/src/components/Lines/styles.module.scss
+++ b/src/components/Lines/styles.module.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   margin-top: 120px;
   overflow: hidden;
+  touch-action: pan-y;
   user-select: initial;
 }
 
